# fastapi-blog

./: .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 29dbdf680547_init_db.py  42312596f37c_init_db.py  49e7c682482a_add_nullable_to_column.py
api/v1/: posts.py
core/: config.py
db/: create_tables.py  session.py
infra/nginx/: nginx.conf
repositories/: post.py
schemas/: post.py
services/: post.py
src/: main.py
src/api/v1/: posts.py
src/core/: config.py
src/db/: create_tables.py  session.py
src/models/: post.py
src/repositories/: post.py
src/schemas/: post.py
src/services/: post.py
src/utils/: repository.py
tests/: conftest.py
tests/test_models/: test_post_model.py
tests/test_repo/: test_repository.py
tests/test_services/: test_post_services.py
utils/: repository.py
